# ABA-variants

./: CLAUDE.md  README.md  waba-framework-2025-12-31T09-43-02.lp  waba-framework-2025-12-31T09-48-46.waba  waba-framework-2025-12-31T11-17-58.waba
ABA/: simple_medical.lp
ABA_ASP/: medical.lp
ABA_ASP_plain/: visualize.py
ABA_ASP_weighted/: medical.lp
ASPARTIX/: condLit_ground.lp  preferred_heuristics.lp  semi_stable_gringo.lp  stage2_gringo.lp  stage_gringo.lp
WABA/: .gitignore  BUDGET_BUG_FIX_SUMMARY.md  CHANGELOG.md  CORRECT_INCLUSION_VERIFICATION.md  QUICK_REFERENCE.md  README.md  REFACTORING_TEST_REPORT.md  REINVENTED_WHEEL_AUDIT.md  SEMANTICS_IMPLEMENTATION_SUMMARY.md  SEMIRING_MONOID_COMPATIBILITY.md  SOLUTION_PLAN.md  analyze_results.sh  analyze_timeouts.py  case_study_evaluation.txt  case_study_final_evaluation.txt  case_study_final_fixed.txt  check_discarding_consistency.py  compare_models.sh  comprehensive_test_results.txt  debug_unsat_case_studies.py  debug_unsat_output.txt  (+35 more)
coreo-group-aspforaba-e557fc7c169d/: LICENSE  README.md  pyproject.toml
coreo-group-aspforaba-e557fc7c169d/ijcai24/: README  solver.py
coreo-group-aspforaba-e557fc7c169d/ijcai24/encodings/: guess_nonflat_aba_adm.lp  guess_nonflat_aba_com.lp  nonflat_aba_stb.lp  verify_nonflat_aba_adm.lp  verify_nonflat_aba_com.lp
coreo-group-aspforaba-e557fc7c169d/src/aspforaba/: __init__.py  __main__.py  aba_solver.py  abaf.py  encoder.py  parser.py
coreo-group-aspforaba-e557fc7c169d/tests/: test_simple.py
coreo-group-aspforaba-e557fc7c169d/tests/data/: ex1.asp  ex2.asp  ex2.iccma
(+412 files in other folders)
